fix alignemt en baseline issues (symbola)

--- a/static/sass/_plumber.scss
+++ b/static/sass/_plumber.scss
@@ -4,6 +4,7 @@
 $baseline-ortica: 0.569;
 $baseline-combine: 0.624;//0.349;
 $baseline-authentic: 0.374;
+$baseline-symbola: 0.214;
 
 @include plumber-set-defaults(
     $grid-height: 6pt,
